Update specimen image external url
