# src/torch_web/torch_web/users/roles_api.py
@@ -1,7 +1,7 @@
 from apiflask import APIBlueprint, Schema
 from apiflask.fields import Integer, String, List, Nested
 from flask import request
-from flask_security import current_user, roles_accepted
+from flask_security import current_user
 from torch_web.users import role
 
 
@@ -17,25 +17,15 @@ class RolesResponse(Schema):
 
 @roles_bp.get("/")
 @roles_bp.output(RolesResponse)
-@roles_bp.doc(operation_id='GetRoles')
-@roles_accepted("admin", "supervisor")  
+@roles_bp.doc(operation_id='GetRoles') 
 def roles_get():
     result = role.get_roles()
     return {
         "roles": result
     }
 
-    #if current_user.has_role("admin"):
-    #    roles = role.get_roles()
-    #elif current_user.has_role("supervisor"):
-    #    roles = role.get_roles_by_name("basic")
-    #else:
-    #    roles = []  
-
-
 
 @roles_bp.post("/")
-@roles_accepted("admin")
 def roles_post():
     role.add_role(request.form.get("name"), request.form.get("description"))
     return role.roles_get()
