# src/torch_web/torch_web/users/users_api.py
@@ -2,7 +2,7 @@ import json
 from apiflask import APIBlueprint, Schema
 from apiflask.fields import Integer, String, List, Nested
 from flask import flash, jsonify, render_template, request, redirect, url_for, session
-from flask_security import current_user, RegisterForm, roles_accepted
+from flask_security import current_user, RegisterForm
 from wtforms import StringField
 from torch_web.users import user, role
 from torch_web.users.roles_api import RoleResponse
@@ -17,11 +17,6 @@ class ExtendedRegisterForm(RegisterForm):
 
 users_bp = APIBlueprint("users", __name__, url_prefix="/users")
 auth_bp = APIBlueprint("auth", __name__, url_prefix="/_auth")
-
-
-class SendInviteRequest(Schema):
-    email = String()
-    roles = Integer()
 
 
 class UserResponse(Schema):
@@ -53,6 +48,11 @@ def logout():
     return redirect("/logout")
 
 
+@auth_bp.get("/register")
+def register():
+    return redirect("/register")
+
+
 @auth_bp.get("/userinfo")
 def userinfo():
     if not current_user.is_authenticated:
@@ -75,53 +75,7 @@ def userinfo():
     }
 
 
-
-secret_key = "your-secret-key"
-serializer = URLSafeSerializer(secret_key)
-
-
-@users_bp.post("/register-user")
-@users_bp.input(SendInviteRequest)
-@users_bp.output(UserResponse)
-@users_bp.doc(operation_id='SendInvite')
-@roles_accepted("admin", "supervisor")
-def register_user(data: dict):
-    token = serializer.dumps({
-        'email': data.get("email"),
-        'role_id': data.get("roles"),
-        'institution_id': current_user.institution_id
-    })
-
-    registration_url = url_for('auth.register', token=token, _external=True)
-
-    subject = "Invitation to register on Torch"
-    html = render_template("templates/emails/invite.html", registration_url=registration_url)
-    user.send_email(data.get("email"), subject, html)    
-
-    return {"message": "Action completed successfully"}
-
-
-@auth_bp.get("/register")
-def register():
-    token = request.args.get("token")
-    try:
-        data = serializer.loads(token)
-        email = data['email']
-        role_id = data['role_id']
-        institution_id = data['institution_id']
-
-        query_params = urlencode({"email": email, "role_id": role_id, "institution_id": institution_id})
-
-        redirect_url = f"/register?{query_params}"
-
-        return redirect(redirect_url)
-    except Exception:
-        return "Invalid or expired token"
-
-
-
 @users_bp.get("/")
-@roles_accepted("admin")
 @users_bp.output(UsersResponse)
 @users_bp.doc(operation_id='GetUsers')
 def users_getall():
@@ -157,7 +111,6 @@ def users_post(userid):
 
 
 @users_bp.post("/<userid>/active")
-@roles_accepted("admin")
 def deactivate_user(userid):
     user.toggle_user_active(userid)
     return jsonify({})
@@ -169,7 +122,6 @@ def user_add_role(userid):
 
 
 @users_bp.post("/<userid>/roles")
-@roles_accepted("admin")
 def assign_role(userid):
     data = json.loads(request.data)
     user.assign_role_to_user(userid, data["role"])
@@ -177,7 +129,6 @@ def assign_role(userid):
 
 
 @users_bp.delete("/<userid>/roles")
-@roles_accepted("admin")
 def delete_role_user(userid):
     data = json.loads(request.data)
     print(data)
@@ -186,7 +137,6 @@ def delete_role_user(userid):
 
 @users_bp.delete("/<int:user_id>")
 @users_bp.doc(operation_id='RemoveUser')
-@roles_accepted("admin", "supervisor")
 def user_remove(user_id):
     result = user.remove_user(user_id)
     if not result:
